package main.View.gestionDeAval;

public class VistaInfoConsignada {
    
}
